test/expect/cmd.cc-paren-castxml.stderr.txt
^error: arguments to '--castxml-cc-gnu' may not start with '--castxml-'

Usage: castxml .*$
